completo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-0
spec:
  selector:
    app: mongo
    statefulset.kubernetes.io/pod-name: mongo-0
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-1
spec:
  selector:
    app: mongo
    statefulset.kubernetes.io/pod-name: mongo-1
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-2
spec:
  selector:
    app: mongo
    statefulset.kubernetes.io/pod-name: mongo-2
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: mongo
  replicas: 3
  selector:
      matchLabels:
        app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec: 
      volumes:
      - name: config
        configMap:
          name: "mongo-init" 
      - name: vdata
        hostPath:
          path: /vdata        
      containers:
      - name: mongo
        image: mongo
        imagePullPolicy: Never        
        command:
        - bash
        - /config/init.sh
        volumeMounts:
        - name: config
          mountPath: /config
        - name: vdata
          mountPath: /data/db
          subPathExpr: $(POD_NAME)          
        resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
        ports:
        - containerPort:  27017
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - db.serverStatus()
          initialDelaySeconds: 10
          timeoutSeconds: 10  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  go-client
  namespace: default
  labels:
    app:  go-client
spec:
  selector:
    matchLabels:
      app: go-client
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  go-client
    spec:
      containers:
      - name:  go-client
        image:  go-mongo-client
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8080
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: go-client-svc
  namespace: default
spec:
  selector:
    app: go-client
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: go-client-svc
      protocol: TCP
      port: 8080
