go-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-client-svc
  namespace: default
spec:
  selector:
    app: go-client
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: go-client-svc
      protocol: TCP
      port: 8080
