mongo-svc-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-1
spec:
  selector:
    app: mongo
    statefulset.kubernetes.io/pod-name: mongo-1
  ports:
    - protocol: TCP
      port: 27017
