mongo-svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-2
spec:
  selector:
    app: mongo
    statefulset.kubernetes.io/pod-name: mongo-2
  ports:
    - protocol: TCP
      port: 27017
